Fix horizontal scroll

--- a/app/common/components/sections/text-and-image/text-and-image.scss
+++ b/app/common/components/sections/text-and-image/text-and-image.scss
@@ -9,7 +9,8 @@
   &__kreska {
     &-top {
       &--mobile {
-        margin-left: 50%;
+        position: relative;
+        left: 50%;
         transform: translateX(-50%);
         margin-bottom: 3rem;
 
